--- a/MarubatsuApp/Base.lproj/Main.storyboard
+++ b/MarubatsuApp/Base.lproj/Main.storyboard
@@ -43,8 +43,8 @@
                                     <action selector="tappedYesButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8Jq-ds-XKf"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="問題がありません。追加してください。" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Erj-oM-Qp8">
-                                <rect key="frame" x="20" y="28" width="335" height="100"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="問題がありません。追加してください。" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Erj-oM-Qp8">
+                                <rect key="frame" x="24" y="63" width="335" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="zPq-Sf-ykc"/>
                                 </constraints>
@@ -52,9 +52,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sO5-uJ-dqL">
-                                <rect key="frame" x="115" y="20" width="146" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sO5-uJ-dqL">
+                                <rect key="frame" x="114" y="40" width="147" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="問題を追加する"/>
                                 <connections>
@@ -67,6 +66,7 @@
                         <constraints>
                             <constraint firstItem="3h7-Gv-ix8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="5qh-nF-94H"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vrn-kD-E6q" secondAttribute="trailing" constant="20" id="8bg-zt-r7g"/>
+                            <constraint firstItem="sO5-uJ-dqL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="9wZ-JK-e0r"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vrn-kD-E6q" secondAttribute="trailing" constant="20" id="AjR-Ui-lU5"/>
                             <constraint firstItem="3h7-Gv-ix8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="C9K-oT-45N"/>
                             <constraint firstItem="vrn-kD-E6q" firstAttribute="leading" secondItem="3h7-Gv-ix8" secondAttribute="trailing" constant="8" id="FU5-pb-a35"/>
@@ -79,6 +79,8 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="vrn-kD-E6q" secondAttribute="bottom" constant="20" id="nJW-zN-uAX"/>
                             <constraint firstItem="vrn-kD-E6q" firstAttribute="leading" secondItem="3h7-Gv-ix8" secondAttribute="trailing" constant="8" id="q5W-5h-UId"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="3h7-Gv-ix8" secondAttribute="bottom" constant="20" id="vOZ-Ox-cRW"/>
+                            <constraint firstItem="sO5-uJ-dqL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="114" id="wgy-pE-Xvs"/>
+                            <constraint firstItem="sO5-uJ-dqL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wvx-SB-dZe"/>
                             <constraint firstItem="Erj-oM-Qp8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="yK1-EJ-bF4"/>
                         </constraints>
                     </view>
@@ -98,9 +100,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="問題文を入力してください。" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xeQ-sr-Wqn">
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="問題文を入力してください。" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xeQ-sr-Wqn">
                                 <rect key="frame" x="44" y="363" width="288" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="textColor" systemColor="opaqueSeparatorColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -108,9 +109,8 @@
                                     <outlet property="delegate" destination="2Fv-Mu-aDK" id="F4y-hR-en5"/>
                                 </connections>
                             </textField>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="3uc-EL-d9N">
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="3uc-EL-d9N">
                                 <rect key="frame" x="157" y="459" width="63" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
                                     <segment title="×"/>
                                     <segment title="⚪︎"/>
@@ -119,9 +119,8 @@
                                     <action selector="selectAnswer:" destination="2Fv-Mu-aDK" eventType="valueChanged" id="TDl-Tb-Old"/>
                                 </connections>
                             </segmentedControl>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="enZ-hK-2kV">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="enZ-hK-2kV">
                                 <rect key="frame" x="107" y="595" width="163" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" systemColor="systemRedColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="問題を削除する"/>
@@ -129,18 +128,8 @@
                                     <action selector="deleteAnswer:" destination="2Fv-Mu-aDK" eventType="touchUpInside" id="yO9-7i-xpc"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ss-SM-uAU">
-                                <rect key="frame" x="126" y="20" width="123" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="TOPに戻る"/>
-                                <connections>
-                                    <action selector="topButton:" destination="2Fv-Mu-aDK" eventType="touchUpInside" id="5Nk-s4-yqe"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="98z-Tg-3CY">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="98z-Tg-3CY">
                                 <rect key="frame" x="107" y="525" width="163" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" systemColor="systemPurpleColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="問題を保存します"/>
@@ -148,9 +137,33 @@
                                     <action selector="saveAnswer:" destination="2Fv-Mu-aDK" eventType="touchUpInside" id="l9f-6Y-MsV"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ss-SM-uAU">
+                                <rect key="frame" x="126" y="0.0" width="123" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="TOPに戻る"/>
+                                <connections>
+                                    <action selector="topButton:" destination="2Fv-Mu-aDK" eventType="touchUpInside" id="5Nk-s4-yqe"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Fvs-Oy-JnJ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="1ss-SM-uAU" firstAttribute="centerX" secondItem="xeQ-sr-Wqn" secondAttribute="centerX" id="1eG-YJ-Qw4"/>
+                            <constraint firstItem="xeQ-sr-Wqn" firstAttribute="centerX" secondItem="enZ-hK-2kV" secondAttribute="centerX" id="3WC-la-5eD"/>
+                            <constraint firstItem="3uc-EL-d9N" firstAttribute="top" secondItem="xeQ-sr-Wqn" secondAttribute="bottom" constant="62" id="6TE-bh-8Af"/>
+                            <constraint firstItem="xeQ-sr-Wqn" firstAttribute="centerX" secondItem="98z-Tg-3CY" secondAttribute="centerX" id="MYR-Ih-uB5"/>
+                            <constraint firstItem="xeQ-sr-Wqn" firstAttribute="leading" secondItem="Fvs-Oy-JnJ" secondAttribute="leading" constant="44" id="Ojh-TU-2yb"/>
+                            <constraint firstItem="enZ-hK-2kV" firstAttribute="top" secondItem="98z-Tg-3CY" secondAttribute="bottom" constant="35" id="RrX-BL-tkw"/>
+                            <constraint firstItem="xeQ-sr-Wqn" firstAttribute="centerX" secondItem="3uc-EL-d9N" secondAttribute="centerX" id="Yt2-Jb-FOi"/>
+                            <constraint firstItem="Fvs-Oy-JnJ" firstAttribute="bottom" secondItem="enZ-hK-2kV" secondAttribute="bottom" constant="37" id="c66-wt-Wc4"/>
+                            <constraint firstItem="1ss-SM-uAU" firstAttribute="centerX" secondItem="AoX-NC-wVH" secondAttribute="centerX" id="daO-Jj-O4m"/>
+                            <constraint firstAttribute="bottom" secondItem="xeQ-sr-Wqn" secondAttribute="bottom" constant="270" id="g2W-xv-AFe"/>
+                            <constraint firstItem="1ss-SM-uAU" firstAttribute="leading" secondItem="Fvs-Oy-JnJ" secondAttribute="leading" constant="126" id="ljA-t8-L43"/>
+                            <constraint firstItem="1ss-SM-uAU" firstAttribute="top" secondItem="Fvs-Oy-JnJ" secondAttribute="top" id="m7N-Z3-SZj"/>
+                            <constraint firstItem="enZ-hK-2kV" firstAttribute="leading" secondItem="Fvs-Oy-JnJ" secondAttribute="leading" constant="107" id="mRQ-Zk-oEx"/>
+                            <constraint firstItem="enZ-hK-2kV" firstAttribute="leading" secondItem="98z-Tg-3CY" secondAttribute="leading" id="xhS-m3-8of"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="eMz-SW-YZx"/>
                     <connections>
